spring-petclinic/k8s/generated-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
spec:
  ingressClassName: nginx

  rules:
    - host: petclinic.doingfun.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port:
                  number: 80
